--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = https://github.com/fenderdigital/vst3_public_sdk
 [submodule "tutorials"]
 	path = tutorials
-	url = ../vst3_tutorials
+	url = https://github.com/steinbergmedia/vst3_tutorials
 [submodule "vstgui4"]
 	path = vstgui4
 	url = https://github.com/fenderdigital/vstgui
